--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,7 @@ nav a.active {
     }
     100%{
         transform: translateY(100%);/*animasi hilang ke bwh*/
+        visibility: hidden;
     }
 }
 
